Fix heading levels for consistency.

--- a/src/content/docs/book/part-0-getting-started/2-computer-use/1-concepts/10-windows.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/1-concepts/10-windows.mdx
@@ -72,7 +72,7 @@ This will open the following display within the terminal. Choose **3 Boot Option
 
 When you select the required option it will take you back to the main menu. Choose **Finish** and then select to **Reboot** the Pi. When it restarts, X Windows will have been started and the desktop will have loaded.
 
-### Accessing other terminals
+## Accessing other terminals
 
 | **Action**            | **Command**                     | **Description**                    |
 | --------------------- | ------------------------------- | ---------------------------------- |
