--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-0-branching.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-0-branching.mdx
@@ -2,27 +2,21 @@
 title: "Branching"
 ---
 
-The machine code of a computer will include instructions that allow it to conditionally jump to another instruction somewhere within the code. We have seen a similar example of this with method calls, where control jumped to the instruction at the start of a method. Rather than jumping to new methods, these conditional jumps are useful for jumping between instructions within the current code.
+The machine code of a computer will include instructions that allow it to conditionally jump to another instruction somewhere within the code. We have seen an example of a non-conditional jump with method calls, where control jumped to the instruction at the start of a method. Rather than jumping to new methods, conditional jumps are useful for jumping between instructions within the current code.
 
-Originally, programs would have been written without any particular structure. This resulted in significant complexity as you could never really be sure of how the program got to any particular place within the code. To overcome this, a set of controled statements were introduced to languages. These structured these conditional jumps to branch or loop statements in a predictable way, where in each case there was a single way into each block of code, and a single way out of it.
+Originally, programs were written without any particular structure. This resulted in significant complexity, as you could never really be sure of how the program got to any particular place within the code. To overcome this, a set of control were introduced into languages. These allowed programmers to add structured conditional jumps to branch or loop statements, where there was always a single way into and out of each block of code.
 
-Lets start by looking at the mechanism know as **branching** or **selection**. Branching allows you to get the computer to take one of a number of paths based on the value of a *condition*. The code enters, evaluates the condition, then jumps to one path or another. All of the paths then rejoin before proceeding to the next statement.
+Let's start by looking at the mechanism known as **branching** or **selection**. Branching allows you to get the computer to take one of a number of paths based on the value of a **condition**. The code enters, evaluates the condition, then follows one of the paths. All paths then rejoin before proceeding to the next statement. Have a look at the following diagram for a visualisation of this idea.
 
-<a id="FigureBranching"></a>
+![Branching commands the computer to take one of a number of possible paths](./images/branching.png "Branching commands the computer to take one of a number of possible paths")
 
-![Figure x.y: Branching commands the computer to take one of a number of possible paths](./images/branching.png "Branching commands the computer to take one of a number of possible paths")
-<div class="caption"><span class="caption-figure-nbr">Figure x.y: </span>Branching commands the computer to take one of a number of possible paths</div><br/>
+There are two forms of branching: [if statements](../03-1-if) and [case statements](../03-2-case).
+Let's look at each of these in detail.
 
-:::note
+:::note[Summary]
 
-- Branching is a kind of **instruction**. You can command the computer to take of a number of paths.
-- A branch has a **condition** that is evaluated, and based on the condition the computer takes one path.
-- The branch is the act of choosing the path, when its command is performed the computer evaluates the condition and then moves to the instructions in the indicated path.
-- Languages usually offer two kinds of branching statements:
-  - [If Statement](../03-1-if) to select between two paths based on a Boolean expression.
-  - [Case Statement](../03-2-case) to select a path based on matching values.
-- The Branch will have one entry point, and one exit point. This feature allows you to combine statements together. This idea comes from the principles of **Structured Programming**, where each component in the code should have a single entry and exit point.
+- Branching is a kind of **instruction**. You can command the computer to take one of several paths through code.
+- A branch has a **condition** that is evaluated and determined which path the computer will take.
+- A branch will have one entry point and one exit point.
 
 :::
-
-Lets look at the [if statement](../03-1-if) and [case statement](../03-2-case) in a little more detail.
