--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-1-if.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-1-if.mdx
@@ -18,7 +18,7 @@ export const sliderImagesIfStatement = [
     altText: "Shows the state in the computer where the language variable has the data 'C#' and the code is about to run line 4.",
     tipStart: 1,
     tips: [
-      "Lines 1-3 get the user input ('C#'), and store it in the variable 'language' on the stack",
+      "Lines 1-3 get the user's input (which in this case we'll say is 'C#'), and store it in the variable 'language' on the stack.",
       "The program counter is incremented to line 4, ready to run the 'if' statement."
     ]
   },
@@ -27,7 +27,7 @@ export const sliderImagesIfStatement = [
     altText: "Shows the state in the computer with C# in the language, and the code starting to run the if statement.",
     tipStart: 2,
     tips: [
-      "The 'if' statement has the computer evaluate the condition as its first action. In this case, the condition checks if the language is 'C#'",
+      "When executing an if statement, the computer first checks the condition. In this case, the condition checks if the value of 'language' is 'C#'.",
       "The value in language is 'C#', so the condition is <span class='booleanTrue'>true</span>. This meaning that the program counter increments by one to move into the associated 'if' block of code."
     ]
   },
@@ -37,9 +37,8 @@ export const sliderImagesIfStatement = [
     tipStart: 3,
     tips: [
       "The compound statement groups lines 5 to 7.",
-      "Line 6 outputs the string 'Good choice. C# is a fine language.'",
-      "Line 7 indicates the end of the compound statement",
-      "The program continues with the next instruction on line 8"
+      "Line 6 outputs the string 'Good choice. C# is a fine language.' to the terminal.",
+      "Line 7 indicates the end of the compound statement, so the end of the if statement."
     ]
   },
   {
@@ -47,9 +46,8 @@ export const sliderImagesIfStatement = [
     altText: "Line 8 runs and prings the output 'Great chat!' to the terminal. The program counter is incremented, and the program ends",
     tipStart: 4,
     tips: [
-      "Line 8 runs and outputs 'Great chat!' to the terminal",
-      "Key point: this ran in sequence as the condition was true",
-      "Lets try this again with different input..."
+      "The program continues with the next instruction on line 8.",
+      "Line 8 runs and outputs 'Great chat!' to the terminal."
     ]
   },
   {
@@ -57,8 +55,9 @@ export const sliderImagesIfStatement = [
     altText: "Shows the state of the computer back at line 4 with 'C++' in the language.",
     tipStart: 5,
     tips: [
-      "This time, the user has input 'C++'",
-      "Now at line 4, the comparison is <span class='booleanFalse'>false</span>",
+      "Let's rewind back to the start of the if statement and try different input.",
+      "This time, we'll say the user has input 'C++'.",
+      "Now at line 4, the condition is <span class='booleanFalse'>false</span>.",
       "As the condition is false, the if statement sets the program counter to 8, skipping the compound statement."
     ]
   },
@@ -67,9 +66,8 @@ export const sliderImagesIfStatement = [
     altText: "Line 8 runs, and outputs 'Great chat!' to the terminal. The program counter is incremented, and the program ends",
     tipStart: 6,
     tips: [
-      "Line 8 runs, and outputs 'Great chat!' to the terminal",
-      "See how the if skips the true branch when the condition is false",
-      "Notice both paths continue with line 8 and output 'Great chat!'"
+      "Line 8 runs, and outputs 'Great chat!' to the terminal.",
+      "Notice for both paths computer still executed line 8 and output 'Great chat!'."
     ]
   }
 ];
@@ -88,18 +86,19 @@ export const sliderImagesIfElseStatement = [
     altText: "Shows the state of the computer at line 4 with 'C#' in the language variable.",
     tipStart: 1,
     tips: [
-      "Lines 1-3 result in the user input 'C#' being stored in the variable 'language' on the stack",
-      "The comparison evaluates to <span class='booleanTrue'>true</span>",
-      "The program steps into the true branch as before"
+      "Let's assume that the user enters 'C#' when asked for input.",
+      "Lines 1-3 result in the user input 'C#' being stored in the variable 'language' on the stack.",
+      "At line 4, the condition evaluates to <span class='booleanTrue'>true</span>.",
+      "The program steps into the true branch as before."
     ]
   },
   {
     src: Slide02ifelse.src,
-    altText: "Shows the cpu runs line 5 to 7 - the true branch.",
+    altText: "Shows the cpu runs line 5-7 - the true branch.",
     tipStart: 2,
     tips: [
-      "The compound statement in lines 5 to 7 run",
-      "Line 6 outputs the message to the terminal",
+      "The compound statement on lines 5-7 runs.",
+      "Line 6 outputs the message 'Good choice, C# is a fine language' to the terminal.",
     ]
   },
   {
@@ -107,9 +106,9 @@ export const sliderImagesIfElseStatement = [
     altText: "Shows the cpu at the else line - line 8",
     tipStart: 3,
     tips: [
-      "Line 8 is back to the if statement",
-      "The 'else' indicates we need to skip the 'false' branch now",
-      "The if statement sets the program counter to 12, jumping over the compound statement that follows the else"
+      "Line 8 is back to the if statement.",
+      "The 'else' indicates we need to skip this branch, because the condition of the if statement was true.",
+      "The if statement sets the program counter to 12, jumping over the compound statement that follows the else."
     ]
   },
   {
@@ -117,8 +116,7 @@ export const sliderImagesIfElseStatement = [
     altText: "Shows the cpu at line 12",
     tipStart: 4,
     tips: [
-      "Line 12 runs and prints the output 'Great chat!' to the terminal",
-      "Notice how the true branch now jumps the false branch so only one of the branches is run"
+      "Line 12 runs and prints the output 'Great chat!' to the terminal.",
     ]
   },
   {
@@ -126,9 +124,9 @@ export const sliderImagesIfElseStatement = [
     altText: "Shows the program back to line 4, with 'C++' in the language",
     tipStart: 5,
     tips: [
-      "Let's reset back to line 4 to see what happens if the user input 'C++'",
-      "The condition is <span class='booleanFalse'>false</span>, the if statement jumps to the statement that follows the else",
-      "This means the program counter will increment to line 9"
+      "Let's reset back to line 4 to see what happens if the user enters 'C++'.",
+      "The condition is <span class='booleanFalse'>false</span>, so the if statement jumps to the statement that follows the 'else'.",
+      "This means the program counter will increment to line 9."
     ]
   },
   {
@@ -136,8 +134,9 @@ export const sliderImagesIfElseStatement = [
     altText: "Shows the program running lines 9 to 11 as the statements within the else branch",
     tipStart: 6,
     tips: [
-      "The else branch has a compound statement from lines 9 to 11",
-      "Line 10 outputs a message to the terminal",
+      "The else branch has a compound statement from lines 9 to 11.",
+      "Line 10 outputs 'Well... good luck with that!' to the terminal.",
+      "Line 11 indicates the end of the compound statement, so the end of the if statement."
     ]
   },
   {
@@ -145,9 +144,8 @@ export const sliderImagesIfElseStatement = [
     altText: "Shows the program at line 12 after the if statement.",
     tipStart: 7,
     tips: [
-      "The sequence continues as we move out of the if statement",
-      "Line 12 outputs a message",
-      "Notice how the if statement jumps to the start of the else, and then the sequence continues from there"
+      "The sequence continues as we move out of the if statement.",
+      "Line 12 outputs 'Great chat!' to the terminal."
     ]
   }
 ];
@@ -171,8 +169,8 @@ export const sliderImagesIfElseIfStatement = [
     altText: "Shows the language is set to C# after running lines 1 to 3",
     tipStart: 1,
     tips: [
-      "Let's start by running through with C# again",
-      "Lines 1 to 3 have run, and C# is in the language variable"
+      "Let's start by running through what happens if the user enters 'C#'.",
+      "Lines 1 to 3 have run, and the value 'C#' is stored in the 'language' variable."
     ]
   },
   {
@@ -180,8 +178,8 @@ export const sliderImagesIfElseIfStatement = [
     altText: "Shows the computer will run lines 4 to 7",
     tipStart: 2,
     tips: [
-      "The condition is <span class='booleanTrue'>true</span>",
-      "Lines 5 to 7 run as the statement within the if"
+      "When the computer reaches the if statement it evaluates the condition, which has a value of <span class='booleanTrue'>true</span>.",
+      "Because the condition is true, the computer executes lines 5-7."
     ]
   },
   {
@@ -189,9 +187,9 @@ export const sliderImagesIfElseIfStatement = [
     altText: "The computer is at line 8 with the else part highlighted",
     tipStart: 3,
     tips: [
-      "Back to the if statement, and we need to jump the else branch",
-      "The statement in the else branch is the second if statement, which goes all the way to line 16",
-      "The sequence continues from line 16"
+      "The computer returns to the if statement, and sees the 'else' branch.",
+      "The 'else' branch contains a second if statement, which goes all the way to line 16.",
+      "Because the condition was true, it skips the entire else branch and the sequence continues from line 16."
     ]
   },
   {
@@ -199,7 +197,7 @@ export const sliderImagesIfElseIfStatement = [
     altText: "Back to the start, with C++ now in the language",
     tipStart: 4,
     tips: [
-      "Now let's see how it works with C++ entered"
+      "Let's rewind to line 3 and see what happens if the user enters 'C++'."
     ]
   },
   {
@@ -207,8 +205,8 @@ export const sliderImagesIfElseIfStatement = [
     altText: "Shows line 4 testing the condition and jumping to the else branch",
     tipStart: 5,
     tips: [
-      "Line 4 evaluates the condition, which is <span class='booleanFalse'>false</span>",
-      "The if statement sets the program counter to 8, at the start of the if statement in the else branch"
+      "At the if statement the condition is evaluated to <span class='booleanFalse'>false</span>.",
+      "The if statement jumps to the 'else' branch by setting the program counter to 8."
     ]
   },
   {
@@ -218,7 +216,7 @@ export const sliderImagesIfElseIfStatement = [
     tips: [
       "The statement in the else branch is a new if statement",
       "Its condition is <span class='booleanTrue'>true</span> as 'false or true' is true",
-      "Control continues to line 9"
+      "Because the condition is true, the computer continues to line 9."
     ]
   },
   {
@@ -226,8 +224,8 @@ export const sliderImagesIfElseIfStatement = [
     altText: "Shows the statements in the second if statements true branch running",
     tipStart: 7,
     tips: [
-      "Lines 9 to 11 are run",
-      "A message is output on line 10"
+      "Lines 9-11 are run.",
+      "The message 'These are great languages' is output to the terminal."
     ]
   },
   {
@@ -235,9 +233,9 @@ export const sliderImagesIfElseIfStatement = [
     altText: "The else must jump the second if's else branch",
     tipStart: 7,
     tips: [
-      "At line 12 we are back to the second if statement's else",
-      "We jump to line 16 to skip the else branch code",
-      "The sequence continues from there"
+      "At line 12 we are back to the second if statement's 'else'.",
+      "Because the second if statement's condition was false, the computer skips the 'else' branch and jumps to line 16.",
+      "The sequence continues from there, and the message 'Great chat!' is output to the terminal."
     ]
   },
   {
@@ -245,8 +243,8 @@ export const sliderImagesIfElseIfStatement = [
     altText: "Back to the start again, with Fortran in the language",
     tipStart: 7,
     tips: [
-      "Back to the start a last time",
-      "We now have Fortran"
+      "Let's reset back to line 3 one last time.",
+      "This time, we will pretend the user enters 'Fortran'."
     ]
   },
   {
@@ -254,8 +252,8 @@ export const sliderImagesIfElseIfStatement = [
     altText: "Line 4 is run, which jumps to line 8",
     tipStart: 7,
     tips: [
-      "Line 4 evaluates the condition, which is <span class='booleanFalse'>false</span>",
-      "We skip the if's statement and jump to line 8"
+      "At line 4 the condition is evaluated to <span class='booleanFalse'>false</span>.",
+      "Because the condition is false, the computer skips to line 8 - the 'else' branch of this if statement."
     ]
   },
   {
@@ -263,9 +261,9 @@ export const sliderImagesIfElseIfStatement = [
     altText: "Line 8 is run, jumping to line 13",
     tipStart: 7,
     tips: [
-      "We are in the else branch - in the second if",
-      "Line 8 condition is <span class='booleanFalse'>false</span>",
-      "We skip the if's statement and jump to line 13 - the statement following its else"
+      "We are now at the second if statement.",
+      "On line 8 the condition evaluates to <span class='booleanFalse'>false</span>.",
+      "Because the condition is false, the computer skips to line 13 - the 'else' branch of the second if statement."
     ]
   },
   {
@@ -273,9 +271,9 @@ export const sliderImagesIfElseIfStatement = [
     altText: "Lines 13 to 15 and 16 then run",
     tipStart: 7,
     tips: [
-      "The else branch has a compound statement - lines 13 to 15",
-      "Line 14 outputs a message",
-      "The sequence continues from this point"
+      "The 'else' branch has a compound statement - lines 13-15.",
+      "Line 14 outputs the message 'Well... good luck with that!' to the terminal.",
+      "The sequence continues from this point."
     ]
   }
 ];
@@ -286,7 +284,7 @@ This concept is visualised in the following image.
 
 ![If statement lets you selectively run a branch of code](./images/statement-if.png "The if statement lets you selectively run a branch of code")
 
-## If Statement - when, why, and how
+## `If` Statement - when, why, and how
 
 The if statement will be a regular feature in your programs. You will use this anywhere you want to optionally run a block of code. The condition has to be a [boolean expression](../01-3-conditions), which you can use [comparison](../01-1-comparisons) and [logical](../01-2-logic-operators) operators to create. You then provide code within the if statement to you want to run when the condition is true. You can also optionally include an **else** branch containing code to run when the condition is false.
 
@@ -302,24 +300,22 @@ The following diagram shows the C# syntax for an if statement.
 
 The keyword for an if statement in C# is `if`.
 This is followed by the condition in brackets, and then the statement to run when the condition is true.
-This can optionally be followed by the `else` keyword and a statement to run when the condition is false. 
+This can optionally be followed by the `else` keyword and a statement to run when the condition is false.
 To run more than one statement in either branch you can use a [compound statement](../02-0-compound-statement).
 
-## How does if work?
+## How does `if` work?
 
-Let's work through a few examples to see how the if statement works. Pay attention to how this fits within the sequence of actions in the code. Understanding how this works will help you see how to make use of it within your projects.
+Let's work through a few examples to see how the if statement works. Pay attention to how the sequence of actions in the code is being affected. Understanding how this works will help you see how to make use of the if statement within your projects.
 
-We can look at running code if a condition is true, running different code when it is false, and combining if statements for more than two paths.
+We will look at running code if a condition is true, running different code when it is false, and combining if statements for more than two paths.
 
 :::tip[Remember]
-
-Control flow statements all utilise the **conditional jump**. This is a very simple mechanism, so you need to add creativity to see how to use this to achieve your ends.
-
+Control flow statements all utilise the **conditional jump**. This is a very simple mechanism, so you need to add creativity to see how to use it to achieve your ends.
 :::
 
-### Standalone if
+### Standalone `if`
 
-You can use an **if statement** to selectively run a block of code when a condition is true. In the following code, we ask the user to tell us which language they use. Then the **if** allows us to check *if* the language is "C#", and when that is true have the computer output a custom message. This is achieved by skipping over those statements when the condition is false.
+The most basic use of an if statement is to selectively run a block of code when a condition is true. In the following code, we ask the user to tell us which language they use. Then the **if** allows us to check *if* the language is "C#", and when that is true have the computer output a custom message. If anything else is entered, then the condition will be false and these statements will be skipped over.
 
 ```csharp
 using static System.Console;
@@ -342,14 +338,12 @@ Step through the following images to see key points about how this runs within t
 <MySwiper client:only height="" images={sliderImagesIfStatement}></MySwiper>
 
 :::tip[Attention]
+Notice the actions of the if: evaluate the condition -- if true, run the statement that follows; if false, jump over the statement that follows.
 
-Notice the actions of the if - evaluate the condition. If true, run the statement that follows. If false, jump over the statement that follows.
-
-That is all the if does.
-
+That is all the `if` does.
 :::
 
-### If with else
+### `If` with `else`
 
 We can add `else` to have a second branch that gets run only when the condition is false. The following code adds an else branch to output a different message when the user enters anything other than "C#".
 
@@ -373,18 +367,19 @@ else
 WriteLine("Great chat!");
 ```
 
-The else adds to the actions the if statement needs to perform. Review the following images to see how this works.
+The `else` adds to the actions the if statement needs to perform. Review the following images to see how this works.
 
 <MySwiper client:only height="" images={sliderImagesIfElseStatement}></MySwiper>
 
 :::tip[Attention]
-
-This is the full set of the if statement actions. They are:
+This is the full set of if statement actions. They are:
 
 1. Evaluate condition
-2. If true, run the statement following the 'if'.
-3. If false, jump to the statement following 'else' or the end of the if
-4. At the else, jump to the end of the if
+2. If true:
+   - run the statement following the 'if'
+   - jump to the end of the if
+3. If false:
+   - jump to the statement following 'else' or, if there is no 'else', the end of the if.
 
 When thinking through your code, you need to do the same in your head.
 
@@ -393,35 +388,32 @@ When thinking through your code, you need to do the same in your head.
 
 :::
 
-### Multiple if statements combined
+### Multiple `if` statements combined
 
-In many cases you will want more than two paths. To achieve this, you need to combine together multiple if statements as shown in the following code. This adds a checks for C and C++ to give them different outputs as well.
+In many cases you will want more than two paths. To achieve this, you need to combine multiple if statements. This is shown in the following code, which gives different outputs for C and C++ as well.
 
 ```csharp
-#include "splashkit.h"
+using static System.Console;
 
-int main()
+string language;
+
+Write("What language do you use? ");
+language = ReadLine();
+
+if (language == "C#")
 {
-    string language;
-
-    write("What language do you use? ");
-    language = read_line();
-
-    if (language == "C#")
-    {
-        write_line("Good choice, C# is a fine language.");
-    }
-    else if (language == "C" || language == "C++")
-    {
-        write_line("These are great low level languages - we will be using these soon!");
-    }
-    else
-    {
-        write_line("Well... good luck with that!");
-    }
-
-    write_line("Great chat!");
+    WriteLine("Good choice, C# is a fine language.");
 }
+else if ((language == "C") || (language == "C++"))
+{
+    WriteLine("These are great languages.");
+}
+else
+{
+    WriteLine("Well... good luck with that!");
+}
+
+WriteLine("Great chat!");
 ```
 
 Review the following images to see how the two if statements work together.
@@ -429,23 +421,21 @@ Review the following images to see how the two if statements work together.
 <MySwiper client:only height="" images={sliderImagesIfElseIfStatement}></MySwiper>
 
 :::tip[Attention]
-Notice how the one statement in the **else** branch can be an **if statement**. When the else is skipped, that means this if statement is skipped.
+Notice how the single statement in the **else** branch can be an **if statement**. When the else is skipped, that means this if statement is skipped.
 :::
 
 ### Reading code
 
-The image sequences above should give you an idea of how to go about reading code. You need to be able to read through the code in the way it will run. Picturing certain values within your variables to see the actions that occur as a result.
+The image sequences above should give you an idea of how to go about reading code. You need to be able to read through the code in the way it will run. To do this, you need to be able to picture certain values within your variables to see how the program's execution would change.
 
-In general, you should be able to approach this in blocks. This is why it is important to have these blocks flow into each other in a consistent way.
+In general, you should be able to approach this in blocks. This is why it is important to have these blocks flow into each other consistently.
 
-Notice that the "Great Chat" message was always output - this is the statement **after** the if statement. So the if statement sits within a sequence - controlling things within its code but still working in the original sequence. It has one entry, where it starts, and one exit.
+Notice that the "Great chat!" message was always output -- this is the statement **after** the `if` statement. So the `if` statement sits within a sequence, controlling things within its code but still working in the original sequence. It has one entry and one exit.
 
-:::note
+:::note[Summary]
 
-- An if statement is an **instruction**. It allows you to command the computer to select a path based on a [boolean expression](../01-boolean-data).
-- The if statement has **two** branches, one that is taken when the condition is true, and the other when it is false.
-- The false branch may *optionally* have instructions that are carried out when the condition is not met.
-- If there are no instructions you want to be performed when the condition is false, you do not need to include an else branch. In this case, the if statement will just skip the true branch when the condition is false.
+- An if statement is an **instruction**. It allows you to command the computer to select a path based on a [boolean condition](../01-3-conditions).
+- The if statement has **two** branches: one that is taken when the condition is true, and another optional branch that is taken when the condition is false.
 - The if statement has one entry point, two paths, and then one exit point.
 
 :::
