Fix broken link in WSL page

--- a/src/content/docs/book/part-0-getting-started/2-computer-use/2-put-together/4-0-setup-win-wsl.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/2-put-together/4-0-setup-win-wsl.mdx
@@ -15,7 +15,7 @@ In this guide, we will walk through the steps to install the necessary applicati
 If you have previously installed SplashKit (before 2024):
 
 - Update SplashKit using your WSL terminal with the command: skm update
-- Then you can skip to Step [2. Install SplashKit](#2-install-splashkit).
+- Then you can skip to Step [3. Install SplashKit Globally](#3-install-splashkit-globally).
 :::
 Now, let's get started:
 
